# recipe-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notebooks/: eda.ipynb
scripts/: index.py  test.py
src/: api.py  generator.py  ingestion.py  retriever.py
